fix(ui): disable scrolling for tui editor and remove doubled scrollbar
- set autofocus: false to disable scrolling in tui editor (fixed after update to 3.1.2)
- set type to wysiwqyg because "moveCursorToEnd" does not work correctly in markdown mode (nhn/tui.editor/issues/1777)
-set overflow: hidden to remove a doubled scrollbar in the ui

Closes #1625

--- a/manager/ui/war/plugins/api-manager/css/apiman.css
+++ b/manager/ui/war/plugins/api-manager/css/apiman.css
@@ -1,5 +1,6 @@
 html {
-  overflow: auto;
+  /*Disable overflow to keep header fixed*/
+  overflow: hidden;
 }
 body {
   line-height: normal;
